@@ -1,4 +1,12 @@
 ------------------------------------------------------
+Release 1 | Beta 0 | Development 2 | Experimental 2
+
+* Added InputManagerController
+* Added InputController
+* Added ControllerUtils
+* Added ControllerTest
+
+------------------------------------------------------
 Release 1 | Beta 0 | Development 2 | Experimental 1
 
 * Added GUIWindow
